changed style and added images

--- a/DespreMine.html
+++ b/DespreMine.html
@@ -23,10 +23,10 @@
 
 <section id="despre-mine">
     <div class="bio">
-        <img src="Images/my_picture.jpg" alt="Imaginea mea" class="bio-img">
+        <img src="Images/avatar.jpg" style="width:50%; height:auto;" alt="Imaginea mea" class="bio-img">
         <div class="bio-text">
             <h2>Bine ai venit pe blogul meu de călătorii!</h2>
-            <p>Salut! Sunt [Numele tău], o persoană pasionată de călătorii, explorări și descoperirea de locuri noi. De mic copil, am avut visul de a călători prin lume și de a împărtăși experiențele mele cu ceilalți. Am început acest blog pentru a vă încuraja și inspira să explorați locuri noi și să vă bucurați de fiecare călătorie.</p>
+            <p>Salut! Sunt Cristina, o persoană pasionată de călătorii, explorări și descoperirea de locuri noi. De mic copil, am avut visul de a călători prin lume și de a împărtăși experiențele mele cu ceilalți. Am început acest blog pentru a vă încuraja și inspira să explorați locuri noi și să vă bucurați de fiecare călătorie.</p>
             <p>Pe acest blog, vei găsi povești din locurile pe care le-am vizitat, recomandări de destinații, sfaturi de călătorie și multe alte lucruri utile pentru aventurile tale. Sper că vei găsi inspirație și motivație pentru a-ți planifica următoarea escapadă!</p>
             <p>În afacerea călătoriilor, sunt o mare iubitoare de fotografie, astfel încât vei vedea multe imagini de la fața locului, care să îți adâncească dorința de a cunoaște mai multe despre fiecare destinație.</p>
         </div>
