--- a/Destinatii.html
+++ b/Destinatii.html
@@ -25,16 +25,16 @@
     <h2>Locuri minunate pe care le-am vizitat</h2>
     
     <div class="destinatie">
-        <img src="Images/mountain_trip.jpg" alt="Munți" class="destinatie-img">
+        <img src="Images/alpi.jpg" alt="Munți" class="destinatie-img">
         <div class="destinatie-info">
             <h3>Munții Alpi</h3>
             <p>Munții Alpi sunt renumiți pentru peisajele lor spectaculoase și activitățile de iarnă. Aici poți face drumeții, schi sau doar să te bucuri de aerul curat montan.</p>
-            <a href="detalii_destinatie.html" class="detalii-link">Detalii</a>
+            <p>Pentru mai multe informații, vizitează <a href="https://www.google.com/search?q=Munții+Alpi" target="_blank">Google</a>.</p>
         </div>
     </div>
 
     <div class="destinatie">
-        <img src="Images/cityscape_trip.jpg" alt="Oraș" class="destinatie-img">
+        <img src="Images/paris.jpg" alt="Oraș" class="destinatie-img">
         <div class="destinatie-info">
             <h3>Paris, Franța</h3>
             <p>Parisul este un oraș plin de istorie, cultură și romanticism. Vizitează Turnul Eiffel, muzeele de renume mondial și bucură-te de atmosfera unică a capitalei Franței.</p>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="destinatie">
-        <img src="Images/beach_trip.jpg" alt="Plajă" class="destinatie-img">
+        <img src="Images/maldive2.jpg" alt="Plajă" class="destinatie-img">
         <div class="destinatie-info">
             <h3>Maldives</h3>
             <p>Insulele Maldive sunt o destinație de vis pentru iubitorii de plaje exotice, ape cristaline și recifuri de corali. Un loc perfect pentru relaxare și sporturi acvatice.</p>
