--- a/Home.html
+++ b/Home.html
@@ -24,15 +24,15 @@
 <section id="produse">
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="Images/plane.jpg" style="width:100%" alt="Imagine 1">
+            <img src="Images/boat.jpg" style="width:50%; height:auto;" alt="Imagine 1">
         </div>
         
         <div class="mySlides fade">
-            <img src="Images/cityscape_trip.jpg" style="width:100%" alt="Imagine 2">
+            <img src="Images/bus.jpg" style="width:50%; height:auto;" alt="Imagine 2">
         </div>
         
         <div class="mySlides fade">
-            <img src="Images/beach_trip.jpg" style="width:100%" alt="Imagine 3">
+            <img src="Images/maldive.jpg" style="width:50%; height:auto;" alt="Imagine 3">
         </div>
     </div>
 
