--- a/LoginPage.html
+++ b/LoginPage.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Înregistrare - Magazinul de Animale</title>
+    <title>Autentificare</title>
     <link rel="stylesheet" href="style.css"> <!-- Adaugă fișierul CSS aici -->
-    <!-- Adaugă scriptul pentru gestionarea înregistrării și autentificării -->
-    <script src="script.js"></script>
 </head>
 <body>
 
 <header>
-    <h1>Magazinul de Animale</h1>
-    <nav>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="AboutUs.html">Despre Noi</a></li>
-            <li><a href="LoginPage.html">Înregistrare/Login</a></li>
-            <li><a href="GalerieDeProduse.html">Galerie de produse</a></li>
-            <li><a href="Cos.html">Cos</a></li>
-        </ul>
-    </nav>
+        <h1>Blogul meu de Călătorii</h1>
+        <nav>
+            <ul>
+                <li><a href="Home.html">Acasă</a></li>
+                <li><a href="Destinatii.html">Destinații</a></li>
+                <li><a href="DespreMine.html">Despre Mine</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="LoginPage.html">Înregistrare/Login</a></li> <!-- Păstrăm link-ul pentru login -->
+            </ul>
+        </nav>
 </header>
 
 <section id="inregistrare">
