changed the login page if the user is already connected

--- a/DespreMine.html
+++ b/DespreMine.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Blogul meu de Călătorii - Despre mine">
     <title>Despre Mine - Blogul meu de Călătorii</title>
     <link rel="stylesheet" href="style.css"> <!-- Include fișierul CSS pentru stiluri -->
+    <link rel="icon" href="Images/favicon.ico" type="image/x-icon"> <!-- Favicon pentru site -->
 </head>
 <body>
 
@@ -21,34 +23,39 @@
     </nav>
 </header>
 
-<section id="despre-mine">
-    <div class="bio">
-        <img src="Images/avatar.jpg" style="width:50%; height:auto;" alt="Imaginea mea" class="bio-img">
-        <div class="bio-text">
-            <h2>Bine ai venit pe blogul meu de călătorii!</h2>
-            <p>Salut! Sunt Cristina, o persoană pasionată de călătorii, explorări și descoperirea de locuri noi. De mic copil, am avut visul de a călători prin lume și de a împărtăși experiențele mele cu ceilalți. Am început acest blog pentru a vă încuraja și inspira să explorați locuri noi și să vă bucurați de fiecare călătorie.</p>
-            <p>Pe acest blog, vei găsi povești din locurile pe care le-am vizitat, recomandări de destinații, sfaturi de călătorie și multe alte lucruri utile pentru aventurile tale. Sper că vei găsi inspirație și motivație pentru a-ți planifica următoarea escapadă!</p>
-            <p>În afacerea călătoriilor, sunt o mare iubitoare de fotografie, astfel încât vei vedea multe imagini de la fața locului, care să îți adâncească dorința de a cunoaște mai multe despre fiecare destinație.</p>
-        </div>
-    </div>
+<main>
+    <section id="despre-mine">
+        <article class="bio">
+            <figure>
+                <img src="Images/avatar.jpg" style="width:50%; height:auto;" alt="Imaginea mea" class="bio-img">
+                <figcaption>Eu în călătorie</figcaption>
+            </figure>
+            <div class="bio-text">
+                <h2>Bine ai venit pe blogul meu de călătorii!</h2>
+                <p>Salut! Sunt Cristina, o persoană pasionată de călătorii, explorări și descoperirea de locuri noi. De mic copil, am avut visul de a călători prin lume și de a împărtăși experiențele mele cu ceilalți. Am început acest blog pentru a vă încuraja și inspira să explorați locuri noi și să vă bucurați de fiecare călătorie.</p>
+                <p>Pe acest blog, vei găsi povești din locurile pe care le-am vizitat, recomandări de destinații, sfaturi de călătorie și multe alte lucruri utile pentru aventurile tale. Sper că vei găsi inspirație și motivație pentru a-ți planifica următoarea escapadă!</p>
+                <p>În afacerea călătoriilor, sunt o mare iubitoare de fotografie, astfel încât vei vedea multe imagini de la fața locului, care să îți adâncească dorința de a cunoaște mai multe despre fiecare destinație.</p>
+            </div>
+        </article>
 
-    <div class="interese">
-        <h3>Interesele mele</h3>
-        <ul>
-            <li>Fotografie de călătorie</li>
-            <li>Descoperirea culturilor noi</li>
-            <li>Găsirea celor mai bune locații de relaxare</li>
-            <li>Gătitul mâncărurilor tradiționale pe care le întâlnesc în călătorii</li>
-            <li>Sporturi de aventură, precum drumețiile și ciclismul montan</li>
-        </ul>
-    </div>
-</section>
+        <section class="interese">
+            <h3>Interesele mele</h3>
+            <ul>
+                <li>Fotografie de călătorie</li>
+                <li>Descoperirea culturilor noi</li>
+                <li>Găsirea celor mai bune locații de relaxare</li>
+                <li>Gătitul mâncărurilor tradiționale pe care le întâlnesc în călătorii</li>
+                <li>Sporturi de aventură, precum drumețiile și ciclismul montan</li>
+            </ul>
+        </section>
+    </section>
+</main>
 
 <footer>
     <p>&copy; 2024 Blogul meu de Călătorii. Toate drepturile rezervate.</p>
     <div class="social-media-links">
-        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+        <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">Facebook</a>
+        <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">Instagram</a>
     </div>
 </footer>
 
