--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
     <h2>Vrei să mă contactezi?</h2>
     <p>Nu ezita să mă contactezi pentru întrebări, sugestii sau orice altceva legat de blogul meu de călătorii. Răspund cu drag la mesaje!</p>
 
-    <form action="mailto:exemplu@domeniu.com" method="POST" enctype="text/plain">
+    <form action="mailto:cristinalacovei63@gmail.com" method="POST" enctype="text/plain">
         <label for="nume">Nume:</label>
         <input type="text" id="nume" name="nume" required>
 
@@ -40,7 +40,7 @@
 
     <div class="contact-info">
         <h3>Informații de Contact</h3>
-        <p>Email: <a href="mailto:exemplu@domeniu.com">exemplu@domeniu.com</a></p>
+        <p>Email: <a href="mailto:cristinalacovei63@gmail.com">cristinalacovei63@gmail.com</a></p>
         <p>Telefon: +40 123 456 789</p>
         <p>Urmărește-mă pe rețelele sociale:</p>
         <div class="social-media-links">
