--- a/LoginPage.html
+++ b/LoginPage.html
@@ -58,8 +58,7 @@
 
 
 <footer>
-    <p>&copy; 2024 Magazinul de Animale. Toate drepturile rezervate.</p>
-    <!-- Link-uri către rețelele de socializare -->
+    <p>&copy; 2024 Blogul meu de Călătorii. Toate drepturile rezervate.</p>
     <div class="social-media-links">
         <a href="https://www.facebook.com/" target="_blank">Facebook</a>
         <a href="https://www.instagram.com/" target="_blank">Instagram</a>
